[package]
name = "tokio-mock"
version = "0.1.0"
authors = ["Émile Grégoire <emile@stepfunc.io>"]
edition = "2018"

[dependencies]
tokio = { version = "^0.2.23", features = ["tcp", "sync", "io-util", "io-std", "time", "rt-core", "rt-threaded", "macros"] }
poll_macros = { git = "https://github.com/stepfunc/poll_macros.git" }

[dev-dependencies]
